# cadical-sys

./: .gitignore  Cargo.toml  EXTRA_INFORMATION.md  LICENSE  README.md  build.rs  wrapper.hpp
.github/workflows/: ci.yml
src/: bridge.rs  cadical_bridge.cpp  cadical_bridge.hpp  ffi.rs  lib.rs
tests/: random_tests.rs
tests/unit_tests/: external_propagaor.rs  fixed_listener.rs  mod.rs  proof_tracer.rs
