[package]
name = "cadical-sys"
description = "Complete and Safe bindings for the CaDiCal SAT solver, made using the cxx crate."
version = "0.2.0"
edition = "2021"
license = "MIT"
links = "cadical"
repository = "https://github.com/sirandreww/cadical-sys.git"
authors = ["Andrew Luka"]
categories = ["system-programming", "development-tools", "SAT-solver"]
keywords = ["cadical", "sat-solver", "bindings", "system-level", "safe"]
readme = "README.md"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
rand ="0.8.4"